# pi-memory

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  spec.md
.github/workflows/: ci.yml
crates/memory-api/: Cargo.toml
crates/memory-api/src/: handlers.rs  routes.rs
crates/memory-cli/: Cargo.toml
crates/memory-cli/src/: commands.rs  main.rs
crates/memory-config/: Cargo.toml
crates/memory-config/src/: lib.rs
crates/memory-core/: Cargo.toml
crates/memory-core/src/: access.rs  conflict.rs  consolidation.rs  errors.rs  event.rs  evidence.rs  lib.rs  lifecycle.rs  observation.rs  privacy.rs  ranking.rs  recall.rs
crates/memory-daemon/: Cargo.toml
crates/memory-daemon/src/: lib.rs  queue.rs  scheduler.rs  worker.rs
crates/memory-db/: Cargo.toml
crates/memory-db/migrations/: 0001_initial_schema.sql  0002_audit_log_writer.sql
crates/memory-db/src/: audit_repo.rs  conflicts_repo.rs  embeddings_repo.rs  events_repo.rs  evidence_repo.rs  lib.rs  migrations.rs  observations_repo.rs  search_repo.rs  supersessions_repo.rs
crates/memory-mcp/: Cargo.toml
crates/memory-mcp/src/: lib.rs  schemas.rs  server.rs  tools.rs  transport.rs
crates/memory-providers/: Cargo.toml
crates/memory-providers/src/: consolidation.rs  context7.rs  embeddings.rs  lib.rs
crates/memory-tests/: Cargo.toml
crates/memory-tests/tests/: integration_mcp.rs  integration_memory.rs
docs/pi-memory/: README.md  contract.md  phases.md
docs/pi-memory/contract/: assumptions.md  constraints.md  decisions.md  goals.md  problem.md  risks.md  scope.md  success-criteria.md
docs/pi-memory/phases/: phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md
docs/pi-memory/spec/: spec-index.md  spec-phase-1.md  spec-phase-2.md  spec-phase-3.md  spec-phase-4.md  spec-phase-5.md  spec-phase-6.md
