[package]
name = "memory-api"
version = "0.1.0"
edition = "2021"

[dependencies]
memory-core = { path = "../memory-core" }
memory-db = { path = "../memory-db" }
memory-providers = { path = "../memory-providers" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
