[package]
name = "memory-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent-memory"
path = "src/main.rs"

[dependencies]
memory-core = { path = "../memory-core" }
memory-db = { path = "../memory-db" }
memory-mcp = { path = "../memory-mcp" }
memory-daemon = { path = "../memory-daemon" }
memory-providers = { path = "../memory-providers" }
memory-config = { path = "../memory-config" }
memory-api = { path = "../memory-api" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres"] }
axum = "0.7"