[package]
name = "memory-core"
version = "0.1.0"
edition = "2021"

[features]
db = ["sqlx"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "macros"] }
regex = "1"
sqlx = { version = "0.8", optional = true, features = ["postgres"] }
