[package]
name = "memory-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
memory-core = { path = "../memory-core" }
memory-db = { path = "../memory-db" }
memory-providers = { path = "../memory-providers" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
