[package]
name = "memory-providers"
version = "0.1.0"
edition = "2021"

[features]
default = ["mock"]
openai = []
ollama = []
anthropic = []
mock = []

[dependencies]
memory-core = { path = "../memory-core" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
